fix for feeds timeline alignment

--- a/app/assets/stylesheets/feeds/feeds.css.scss
+++ b/app/assets/stylesheets/feeds/feeds.css.scss
@@ -201,6 +201,7 @@ $border_thin: 0px;
       margin-bottom: 0px;
 
       padding-top: 220px;
+      top: -141px;
 
       list-style: none;
       border-left: $border_thick solid $white;
